--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,5 +1,4 @@
 logo: assets/imagery/cyverse_globe_white.png
-# background: assets/imagery/merged.png
 background-size: cover
-theme: night
+#theme: night
 transition: fade
