--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -2,3 +2,4 @@ logo: assets/imagery/cyverse_globe_white.png
 background-size: cover
 theme: moon
 transition: fade
+footnote : "CyVerse - <a href='https://cyverse.org'>Learn More</a>"
